--- a/index.html
+++ b/index.html
@@ -204,10 +204,10 @@
 <header>
   <h1>Toshiba Printer Guide</h1>
   <nav>
-    <button onclick="document.getElementById('setup').scrollIntoView()">Setup</button>
-    <button onclick="document.getElementById('support').scrollIntoView()">Support</button>
-    <button onclick="document.getElementById('download').scrollIntoView()">Download</button>
-    <button onclick="document.getElementById('install').scrollIntoView()">Install</button>
+    <a href="https://toshibaprinter.pages.dev/"><button onclick="document.getElementById('setup').scrollIntoView()">Setup</button></a>
+    <a href="https://toshibaprinter.pages.dev/support.html"><button onclick="document.getElementById('support').scrollIntoView()">Support</button></a>
+    <a href="https://toshibaprinter.pages.dev/download.html"><button onclick="document.getElementById('download').scrollIntoView()">Download</button></a>
+    <a href="https://toshibaprinter.pages.dev/install.html"><button onclick="document.getElementById('install').scrollIntoView()">Install</button></a>
   </nav>
 </header>
 
