--- a/download.html
+++ b/download.html
@@ -151,6 +151,100 @@
         padding: 15px;
       }
     }
+
+
+
+
+
+
+
+
+
+
+     .download-form {
+      background: #fff;
+      max-width: 500px;
+      margin: 40px auto;
+      padding: 25px 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    }
+
+    .download-form p.title {
+      font-size: 20px;
+      font-weight: 600;
+      margin-bottom: 20px;
+      text-align: center;
+      color: #004080;
+    }
+
+    .form-group {
+      margin-bottom: 15px;
+    }
+
+    label {
+      display: block;
+      font-weight: 600;
+      margin-bottom: 5px;
+      color: #333;
+    }
+
+    input[type="text"],
+    input[type="email"],
+    select {
+      width: 100%;
+      padding: 10px;
+      font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      background:black;
+      color:white;
+    }
+
+    button {
+      width: 100%;
+      padding: 12px;
+      font-size: 16px;
+      color: #fff;
+      background-color: #004080;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #0358ad;
+    }
+
+    .note {
+      text-align: center;
+      margin-top: 20px;
+      font-size: 14px;
+      color: #555;
+    }
+
+    @media (max-width: 768px) {
+      .download-form {
+        padding: 20px;
+        margin: 20px 10px;
+      }
+
+      .download-form p.title {
+        font-size: 18px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .download-form {
+        padding: 15px;
+      }
+
+      input,
+      button {
+        font-size: 15px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -173,6 +267,39 @@
     <h2>Toshiba Printer Driver Download: Complete Installation & Troubleshooting Guide</h2>
   </section>
 
+<div class="download-form">
+    <p class="title">Download Your Software</p>
+    <form action="#" method="post">
+      <div class="form-group">
+        <label for="full-name">Full Name</label>
+        <input type="text" id="full-name" name="full_name" placeholder="Enter your name" required />
+      </div>
+
+      <div class="form-group">
+        <label for="email">Email Address</label>
+        <input type="email" id="email" name="email" placeholder="Enter your email" required />
+      </div>
+
+      <div class="form-group">
+        <label for="device">Device Type</label>
+        <select id="device" name="device" required>
+          <option value="">-- Select Device --</option>
+          <option value="mobile">Windows 7</option>
+          <option value="mobile">Windows 8</option>
+          <option value="mobile">Windows 10</option>
+          <option value="mobile">Windows 11</option>
+          <option value="tablet">MacOS</option>
+          <option value="desktop">PC</option>
+          <option value="desktop">IOS</option>
+          <option value="desktop">Other</option>
+        </select>
+      </div>
+
+      <button type="submit">Download Now</button>
+    </form>
+  </div>
+
+  
   <section class="container">
     <p>When it comes to reliable office technology, Toshiba stands out with its innovative range of printers and multifunction devices. Whether you’re managing a busy office environment or working from home, having the correct Toshiba printer driver installed ensures smooth operation, improved performance, and seamless communication between your computer and your Toshiba device.</p>
 
