--- a/download.html
+++ b/download.html
@@ -158,7 +158,21 @@
 
 
 
+.btn {
+      width: 100%;
+      padding: 12px;
+      font-size: 16px;
+      color: #fff;
+      background-color: #004080;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
 
+    .btn:hover {
+      background-color: #0358ad;
+    }
 
 
      .download-form {
