--- a/download.html
+++ b/download.html
@@ -158,8 +158,8 @@
 
 
 
-.btn {
-      width: 100%;
+.download-form button {
+    width:100%;
       padding: 12px;
       font-size: 16px;
       color: #fff;
@@ -170,11 +170,9 @@
       transition: background-color 0.3s ease;
     }
 
-    .btn:hover {
+    .download-form button:hover {
       background-color: #0358ad;
     }
-
-
      .download-form {
       background: #fff;
       max-width: 500px;
