--- a/install.html
+++ b/install.html
@@ -377,7 +377,7 @@
         </select>
       </div>
 
-      <button type="submit">Download Now</button>
+      <button type="submit">Install Now</button>
     </form>
   </div>
 
