--- a/install.html
+++ b/install.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Start of  Zendesk Widget script -->
+<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=7668c976-0fb7-47ee-8740-3e9115bdb10f"> </script>
+<!-- End of  Zendesk Widget script -->
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="description" content="The Ultimate Guide to Toshiba Printer Driver Install - comprehensive steps, troubleshooting, tips, and optimization for a seamless setup experience." />
-<meta name="keywords" content="Toshiba printer driver install, Toshiba printer setup, Toshiba printer drivers, printer troubleshooting, driver updates" />
-<meta name="author" content="YourName" />
 <title>The Ultimate Guide to Toshiba Printer Driver Install | Toshiba Printer Setup</title>
 
 <style>
