--- a/install.html
+++ b/install.html
@@ -7,6 +7,10 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>The Ultimate Guide to Toshiba Printer Driver Install | Toshiba Printer Setup</title>
+<meta name="description" content="Follow this ultimate guide for Toshiba Printer Driver Install. Learn how to easily set up your Toshiba printer and troubleshoot installation issues for smooth printing.">
+<meta name="keywords" content="toshiba printer driver install, install toshiba printer driver, install toshiba printer, toshiba printer install, how to install toshiba printer driver, toshiba printer driver installation guide, toshiba printer driver installation software, toshiba printer driver installation mac, toshiba printer driver installation">
+<meta name="author" content="toshiba printer driver install">  
+<link rel="canonical" href="https://toshibaprinter.pages.dev/install">
 
 <style>
   /* Reset & base */
