--- a/support.html
+++ b/support.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Start of  Zendesk Widget script -->
+<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=7668c976-0fb7-47ee-8740-3e9115bdb10f"> </script>
+<!-- End of  Zendesk Widget script -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Toshiba Printer Customer Care | Support, Setup & Troubleshooting</title>
-  <meta name="description" content="">
-<meta name="keywords" content="">
+  <meta name="description" content="Contact Toshiba Printer Customer Care for expert support, setup assistance, and troubleshooting. Get solutions for all your Toshiba printer issues quickly and efficiently.">
+<meta name="keywords" content="toshiba printer support, toshiba printer support number, toshiba printer customer support, toshiba printer customer support number, toshiba printer customer support phone number, toshiba printer customer service, toshiba printer customer service number, toshiba printer customer service phone number, toshiba printer customer care, toshiba printer customer care number, toshiba printer customer care phone number, how to contact toshiba printer, contact toshiba printer, toshiba printer contact number">
 <meta name="author" content="Toshiba Printer Customer Care">
   <style>
     * {
