--- a/install.html
+++ b/install.html
@@ -336,10 +336,10 @@
     <div class="nav-container" role="navigation" aria-label="Primary navigation">
       <div class="logo" tabindex="0">Toshiba Printer</div>
       <nav>
-        <button type="button" aria-label="Setup">Setup</button>
-        <button type="button" aria-label="Support">Support</button>
-        <button type="button" aria-label="Download">Download</button>
-        <button type="button" aria-label="Install">Install</button>
+        <a href="https://toshibaprinter.pages.dev/"><button type="button" aria-label="Setup">Setup</button></a>
+        <a href="https://toshibaprinter.pages.dev/support/"><button type="button" aria-label="Support">Support</button></a>
+        <a href="https://toshibaprinter.pages.dev/download/"><button type="button" aria-label="Download">Download</button></a>
+        <a href="https://toshibaprinter.pages.dev/install/"><button type="button" aria-label="Install">Install</button></a>
       </nav>
     </div>
   </header>
