--- a/support.html
+++ b/support.html
@@ -184,10 +184,10 @@
     <div class="nav-container" role="navigation" aria-label="Primary navigation">
       <div class="logo" tabindex="0">Toshiba Printer</div>
       <nav>
-        <button type="button" aria-label="Setup">Setup</button>
-        <button type="button" aria-label="Support">Support</button>
-        <button type="button" aria-label="Download">Download</button>
-        <button type="button" aria-label="Install">Install</button>
+        <a href=""><button type="button" aria-label="Setup">Setup</button></a>
+        <a href=""><button type="button" aria-label="Support">Support</button></a>
+        <a href=""><button type="button" aria-label="Download">Download</button></a>
+        <a href=""><button type="button" aria-label="Install">Install</button></a>
       </nav>
     </div>
   </header>
