--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 <body>
 
 <header>
-  <h1>Toshiba Printer Guide</h1>
+  <h1>Toshiba Printer</h1>
   <nav>
     <a href="https://toshibaprinter.pages.dev/"><button onclick="document.getElementById('setup').scrollIntoView()">Setup</button></a>
     <a href="https://toshibaprinter.pages.dev/support.html"><button onclick="document.getElementById('support').scrollIntoView()">Support</button></a>
