--- a/support.html
+++ b/support.html
@@ -106,6 +106,7 @@
       font-size: 1.2rem;
       max-width: 800px;
       line-height: 1.5;
+      color:#003366;
     }
     
     @keyframes slideIn {
@@ -184,10 +185,10 @@
     <div class="nav-container" role="navigation" aria-label="Primary navigation">
       <div class="logo" tabindex="0">Toshiba Printer</div>
       <nav>
-        <a href=""><button type="button" aria-label="Setup">Setup</button></a>
-        <a href=""><button type="button" aria-label="Support">Support</button></a>
-        <a href=""><button type="button" aria-label="Download">Download</button></a>
-        <a href=""><button type="button" aria-label="Install">Install</button></a>
+        <a href="https://toshibaprinter.pages.dev/"><button type="button" aria-label="Setup">Setup</button></a>
+        <a href="https://toshibaprinter.pages.dev/support/"><button type="button" aria-label="Support">Support</button></a>
+        <a href="https://toshibaprinter.pages.dev/download/"><button type="button" aria-label="Download">Download</button></a>
+        <a href="https://toshibaprinter.pages.dev/install/"><button type="button" aria-label="Install">Install</button></a>
       </nav>
     </div>
   </header>
