--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 
   <article id="install" tabindex="-1">
     <h3>Step 5: Connecting Your Toshiba Printer to a Computer (USB Setup)</h3>
-    <p>For direct, wired connections, you can connect your Toshiba printer to a computer using a USB cable. Follow these steps:</p>
+    <p>For direct, wired connections, you can connect your <a href="https://sites.google.com/view/toshibaprinterguide">Toshiba printer</a> to a computer using a USB cable. Follow these steps:</p>
     <ul>
       <li>Turn off both the printer and the computer.</li>
       <li>Plug one end of the USB cable into the printer and the other into your computer’s USB port.</li>
@@ -427,7 +427,7 @@
 
   <article id="support" tabindex="-1">
     <h3>Step 8: Troubleshooting Common Printer Setup Issues</h3>
-    <p>Even after following the Toshiba printer setup guide, you may encounter a few common issues. Here’s how to troubleshoot:</p>
+    <p>Even after following the <a href="https://sites.google.com/view/toshibaprinterguide/articles/toshiba-printer-set-up">Toshiba printer setup guide</a>, you may encounter a few common issues. Here’s how to troubleshoot:</p>
     <ol>
       <li><strong>Printer Not Connecting to Wi-Fi</strong><br />
         Double-check that the printer is within range of your Wi-Fi router.<br />
@@ -452,7 +452,7 @@
     </ol>
 
     <h3>Conclusion</h3>
-    <p>Setting up your Toshiba printer doesn’t have to be complicated. By following the Toshiba printer setup guide outlined in this article, you can get your printer up and running in no time. Whether you're connecting via USB, setting up wireless printing, or configuring mobile printing options, these steps ensure that your printer is configured correctly for optimal performance.</p>
+    <p>Setting up your Toshiba printer doesn’t have to be complicated. By following the <a href="https://sites.google.com/view/toshibaprinterguide/articles/toshiba-printer-set-up">Toshiba printer setup</a> guide outlined in this article, you can get your printer up and running in no time. Whether you're connecting via USB, setting up wireless printing, or configuring mobile printing options, these steps ensure that your printer is configured correctly for optimal performance.</p>
     <p>If you encounter any issues, refer to the troubleshooting section, or consult the user manual for additional tips. Toshiba printers offer a smooth, hassle-free experience once they're properly set up, and they’re designed to provide excellent print quality for both home and office use.</p>
   </article>
 
