--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
     </ol>
 
     <h3>Conclusion</h3>
-    <p>Setting up your Toshiba printer doesn’t have to be complicated. By following the <a href="https://sites.google.com/view/toshibaprinterguide/articles/toshiba-printer-set-up">Toshiba printer setup</a> guide outlined in this article, you can get your printer up and running in no time. Whether you're connecting via USB, setting up wireless printing, or configuring mobile printing options, these steps ensure that your printer is configured correctly for optimal performance.</p>
+    <p>Setting up your <a href="https://toshibaprinter.pages.dev/">Toshiba printer</a> doesn’t have to be complicated. By following the <a href="https://sites.google.com/view/toshibaprinterguide/articles/toshiba-printer-set-up">Toshiba printer setup</a> guide outlined in this article, you can get your printer up and running in no time. Whether you're connecting via USB, setting up wireless printing, or configuring mobile printing options, these steps ensure that your printer is configured correctly for optimal performance.</p>
     <p>If you encounter any issues, refer to the troubleshooting section, or consult the user manual for additional tips. Toshiba printers offer a smooth, hassle-free experience once they're properly set up, and they’re designed to provide excellent print quality for both home and office use.</p>
   </article>
 
