--- a/install.html
+++ b/install.html
@@ -392,9 +392,9 @@
     <p>Without the proper driver, your Toshiba printer may not respond correctly, might display errors, or could produce incomplete or incorrect output. Ensuring a correct toshiba printer driver install is critical for reliability, optimal print quality, and smooth compatibility with your operating system.</p>
 
     <h3>Preparing for Toshiba Printer Driver Install</h3>
-    <p>Before you begin the toshiba printer driver install, it’s essential to take a few preparatory steps. First, confirm the exact model of your Toshiba printer. Each model may require a specific driver package, and installing the wrong driver can result in incompatibility or malfunction.</p>
+    <p>Before you begin the <a href="https://sites.google.com/view/toshibaprinterguide/articles/toshiba-printer-driver-install">toshiba printer driver install</a>, it’s essential to take a few preparatory steps. First, confirm the exact model of your Toshiba printer. Each model may require a specific driver package, and installing the wrong driver can result in incompatibility or malfunction.</p>
     <p>Once you have noted your model information, power up the printer and connect it to your computer via USB cable or ensure it is correctly connected to a network if it’s a network-enabled device. Turn on your computer. Make sure that any previous partial installations or conflicting driver files are removed or uninstalled to avoid interference.</p>
-    <p>Ready your operating system’s details as well—know whether you are using a version of Windows, macOS, or a Linux distribution. This clarity helps ensure the toshiba printer driver install matches your system’s requirements.</p>
+    <p>Ready your operating system’s details as well—know whether you are using a version of Windows, macOS, or a Linux distribution. This clarity helps ensure the <a href="https://sites.google.com/view/toshibaprinterguide/articles/toshiba-printer-driver-install">toshiba printer install</a> matches your system’s requirements.</p>
   </article>
 
   <article id="download" tabindex="0">
@@ -431,7 +431,7 @@
     
     <ul>
       <li><strong>Windows:</strong> You may need administrative privileges for the toshiba printer driver install. The installer may require confirmation via User Account Control prompts. Make sure to allow it to proceed. For shared network printing, you can install the driver on a host computer and share the printer with other network devices.</li>
-      <li><strong>macOS:</strong> Often uses built‑in drivers or Apple’s AirPrint system. After a toshiba printer driver install, macOS may automatically detect the device and use a generic driver. If your Toshiba model has specialized features, installing the official Toshiba driver package ensures full functionality.</li>
+      <li><strong>macOS:</strong> Often uses built‑in drivers or Apple’s AirPrint system. After a <a href="https://toshibaprinter.pages.dev/install">toshiba printer driver install</a>, macOS may automatically detect the device and use a generic driver. If your Toshiba model has specialized features, installing the official Toshiba driver package ensures full functionality.</li>
       <li><strong>Linux:</strong> Driver installation may involve package managers and repositories. Debian‑based systems may use .deb packages; Red Hat‑based systems may use .rpm. Alternatively, open‑source drivers such as Gutenprint or TurboPrint may support your Toshiba model. Ensure proper cups configuration and no missing dependencies.</li>
     </ul>
     <p>Regardless of OS, restart your system or the print management subsystem after installation to ensure full integration.</p>
