--- a/download.html
+++ b/download.html
@@ -225,7 +225,7 @@
   <header>
     <h1>Toshiba Printer</h1>
     <div class="nav-buttons">
-      <a href="https://toshibaprinter.pages.dev/"><button>Setup</button></a>
+      <a href="https://setupprinter.net/"><button>Setup</button></a>
       <a href="https://toshibaprinter.pages.dev/support"><button>Support</button></a>
       <a href="https://toshibaprinter.pages.dev/download"><button>Download</button></a>
       <a href="https://toshibaprinter.pages.dev/install"><button>Install</button></a>
