--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
 <header>
   <h1>Toshiba Printer</h1>
   <nav>
+    <a href="https://toshibaprinter.pages.dev/"><button type="button" aria-label="Home">Home</button></a>
     <a href="https://setupprinter.net/"><button onclick="document.getElementById('setup').scrollIntoView()">Setup</button></a>
     <a href="https://toshibaprinter.pages.dev/support.html"><button onclick="document.getElementById('support').scrollIntoView()">Support</button></a>
     <a href="https://toshibaprinter.pages.dev/download.html"><button onclick="document.getElementById('download').scrollIntoView()">Download</button></a>
